--- a/assets/scss/components/_team.scss
+++ b/assets/scss/components/_team.scss
@@ -1,5 +1,5 @@
 .site-team{
-  padding: 100px 0;
+  padding: 100px 0 25px 0;
   &-member{
     background: $black;
     padding: 65px 30px 30px;
